tidy up the 3-level nurses stress example

--- a/6-example_hox2_nurses.Rmd
+++ b/6-example_hox2_nurses.Rmd
@@ -1,6 +1,6 @@
 # Intro 3-Level Model Example: Nurse's Stress Intervention
 
-
+![](images/header_hox_nurses.png)
 
 ```{r, include=FALSE}
 knitr::opts_chunk$set(comment     = "",
@@ -32,13 +32,19 @@ library(optimx)       # Different optimizers to solve mlm's
 ## Background
 <!-- ========================================================= -->
 
-The text **"Multilevel Analysis: Techniques and Applications, Third Edition"** [@hox2017] has a companion [website](https://multilevel-analysis.sites.uu.nl/) which includes links to all the data files used throughout the book (housed on the [book's GitHub repository](https://github.com/MultiLevelAnalysis)).  
+```{block type='rmdlink', echo=TRUE}
+The text **"Multilevel Analysis: Techniques and Applications, Third Edition"** [@hox2017] has a companion [website](https://multilevel-analysis.sites.uu.nl/) which includes links to all the data files used throughout the book (housed on the [book's GitHub repository](https://github.com/MultiLevelAnalysis)). 
+```
 
+ 
 The following example is used through out @hox2017's chapater 2.
 
 > From **Appendix E**:  
 >
-> The **nurses.sav** file contains three-level simulated data from a hypothetical study on stress in hospitals.  The data are from nurses working in wards nested within hospitals.  It is a cluster-randomized experiment.  In each of **25** hospitals, **four wards** are selected and randomly assigned to an experimental and a control condition.  In the experimental condition, a training program is offered to all nurses to cope with job-related stress.  After the program is completed, a sample of about 10 nurses from each ward is given a test that measures job-related stress.  ADditional variables are: nurse age (years), nurse experience (years), nurse gender (0=male, 1 = female), type of ward (0=general care, 1=special care), and hospital size (0=small, 1 = medium, 2=large).  The data have been generated to illustrate three-level analysis with a random slope for the effect of `ExpCon`.
+> The **nurses.sav** file contains three-level simulated data from a hypothetical study on stress in hospitals.  The data are from nurses working in wards nested within hospitals.  It is a cluster-randomized experiment.  In each of **25** hospitals, **four wards** are selected and randomly assigned to an experimental and a control condition.  In the experimental condition, a training program is offered to all nurses to cope with job-related stress.  After the program is completed, a sample of about 10 nurses from each ward is given a test that measures job-related stress.  Additional variables *(covariates)* are: nurse age (years), nurse experience (years), nurse gender (0=male, 1 = female), type of ward (0=general care, 1=special care), and hospital size (0=small, 1 = medium, 2=large).  The data have been generated to illustrate three-level analysis with a random slope for the effect of the intervention.
+
+![](images/diagram_hox_nurses.png)
+
 
 Here the data is read in and the SPSS variables with labels are converted to $R$ factors. 
 
@@ -50,7 +56,7 @@ data_raw <- haven::read_sav("https://github.com/MultiLevelAnalysis/Datasets-thir
 
 ### Unique Identifiers
 
- All standardized *(starts with "Z")* and mean centered *(starts with "C")* variables will be remove so that their creation may be shown later.  A new indicator varible for nurses with be created by combining the `hospital`, `ward`, and `nurse` indicators.  Having a unique, distinct identifier variable for each of the lowest (Level 1) units is imparative for multilevel anlayses.
+ All standardized *(starts with "Z")* and mean centered *(starts with "C")* variables will be remove so that their creation may be shown later.  A new indicator varible for nurses with be created by combining the `hospital`, `ward`, and `nurse` indicators.  Having a unique, distinct identifier variable for each of the units on lower (Level 1 and 2) levels is helpful for multilevel anlayses.
 
 ```{r}
 data_nurse <- data_raw %>%
@@ -71,6 +77,45 @@ tibble::glimpse(data_nurse)
 ```
 
 
+### Centering Variables
+
+```{block type='rmdlightbulb', echo=TRUE}
+When variables are involved in an interaction, it may be advantageous to center the variables.  @hox2017 covers this in chapter 4.  
+```
+
+
+To center categorical variables:    
+1. Convert then to integers, starting with zero: $0, 1, \dots$    
+2. Subtract the mean
+
+
+
+
+```{r}
+data_nurse %>% 
+  dplyr::mutate(expconN    = as.numeric(expcon)   - 1) %>%  # Numeric Version of experimental condition
+  dplyr::mutate(hospsizeN  = as.numeric(hospsize) - 1) %>%  # Numeric Version of hospital size
+  dplyr::select(expcon, expconN, hospsize, hospsizeN) %>% 
+  summary()
+```
+
+
+```{r}
+data_nurse <- data_nurse %>% 
+  dplyr::mutate(expconN    = as.numeric(expcon)   - 1) %>%  # Numeric Version of experimental condition
+  dplyr::mutate(hospsizeN  = as.numeric(hospsize) - 1) %>%  # Numeric Version of hospital size
+  dplyr::mutate(expconNG   = expconN   - 0.504) %>%         # Grand-Mean Centered version of experimental condition
+  dplyr::mutate(hospsizeNG = hospsizeN - 0.776)             # Grand-Mean Centered version of ehospital size
+```
+
+
+```{r}
+table(data_nurse$expconNG)
+```
+
+```{r}
+table(data_nurse$hospsizeNG)
+```
 
 ## Exploratory Data Analysis
 
@@ -95,12 +140,11 @@ Tyson Barrett's  **furniture** package includes the extremely useful function `t
 
 ```{r, results='asis'}
 data_nurse %>% 
-  furniture::table1(age, genderF, experien,  wardtype, hospsize, 
+  furniture::table1(age, genderF, experien, wardtype, hospsize, hospsizeN, hospsizeNG,
                      splitby    = ~ expcon,                                  # var to divide sample by
                      test       = TRUE,                                      # test groups different?
                      type       = "full",                                    # give the test statistic
-                     output     = "html",                                    # output for latex
-                     align      = c("l", "r", "r", "r"),                     # column alignment
+                     output     = "html",                                    # output for html
                      caption    = "Compare Intervention groups on five main variables")  # title
 ```
 
@@ -125,26 +169,27 @@ The t-test performed by the `furniture::table1()` function will always assume in
 Fit the model to the data, with both ML and REML.
 
 ```{r}
-nurse_lmer_0_re <- lme4::lmer(stress ~ 1 + (1|hospital/ward),  # each hospital contains several wards
+nurse_lmer_0_re <- lme4::lmer(stress ~ 1 +              # Fixed Intercept for all nurses
+                                (1|hospital/ward),      # Random Intercepts for wards within hospitals
                               data = data_nurse,
                               REML = TRUE)              # fit via REML (the default) for ICC calculations
 
-nurse_lmer_0_ml <- lme4::lmer(stress ~ 1 + (1|hospital/ward),  
+nurse_lmer_0_ml <- lme4::lmer(stress ~ 1 +              # Fixed Intercept for all nurses
+                                (1|hospital/ward),      # Random Intercepts for wards within hospitals 
                               data = data_nurse,
                               REML = FALSE)             # fit via ML for comparing FIXED effects inclusion
 ```
 
 ```{r, include=FALSE}
-texreg::screenreg(list(nurse_lmer_0_ml, nurse_lmer_0_re),
-                custom.model.names = c("M0: Null (ML)", "M0: Null (REML)"),
-                caption = "NULL Model: different estimation methods",
-                digits = 4)
+texreg::screenreg(list(nurse_lmer_0_ml, nurse_lmer_0_re))
 ```
 
 ```{r, results='asis'}
 texreg::htmlreg(list(nurse_lmer_0_ml, nurse_lmer_0_re),
                 custom.model.names = c("M0: Null, ML", "M0: Null, REML"),
                 caption = "NULL Model: different estimation methods",
+                caption.above = TRUE,
+                single.row = TRUE,
                 digits = 4)
 ```
 
@@ -154,15 +199,6 @@ texreg::htmlreg(list(nurse_lmer_0_ml, nurse_lmer_0_re),
 
 The ICC is calculated by dividing the between-group-variance (random intercept variance) by the total variance (i.e. sum of between-group-variance and within-group (residual) variance).
 
-```{block type='genericEq', echo=TRUE}
-**Intraclass Correlation (ICC) Formula**
-$$
-\overbrace{\rho}^{\text{ICC}} = 
-\frac{\overbrace{\sigma^2_{u0}}^{\text{Random Intercept}\atop\text{Variance}}}
-     {\underbrace{\sigma^2_{u0}+\sigma^2_{e}}_{\text{Total}\atop\text{Variance}}}
-\tag{Hox 2.9}
-$$
-```
 
 ```{r}
 lme4::VarCorr(nurse_lmer_0_re) 
@@ -214,7 +250,7 @@ $$
 $$
 ```
 
-For more than two levels, the `sjstats::icc()` function computes ICC's by the Davis and Scott method.
+
 
 ```{r}
 0.489 / (0.174 + 0.489 + 0.301) # middle level (wards)
@@ -222,10 +258,39 @@ For more than two levels, the `sjstats::icc()` function computes ICC's by the Da
 ```
 
 
+```{block type='rmdimportant', echo=TRUE}
+For more than two levels, the 'sjstats::icc()' function computes ICC's by the Davis and Scott method.
+```
 
 ```{r}
 sjstats::icc(nurse_lmer_0_re)
 ```
+
+The proportion of variange in nurse stress level is 0.51 at the ward level and 0.18 at the hospital level.
+
+
+To test if the three level model is justified statistically, compare the null models with and without the nesting of wards in hospitals.
+
+```{r}
+nurse_lmer_0_re_2level <- lme4::lmer(stress ~ 1 + (1|wardid),  # each hospital contains several wards
+                              data = data_nurse,
+                              REML = TRUE)              # fit via REML (the default) for ICC calculations
+```
+
+
+```{r, results='asis'}
+texreg::htmlreg(list(nurse_lmer_0_re_2level, nurse_lmer_0_re),
+                custom.model.names = c("2 levels", "3 levels"),
+                single.row = TRUE)
+```
+
+The deviance test or likelihood-ratio test shows that the inclusion of the nesting of wards within hospitals better explains the variance in nurse stress levels.
+
+```{r}
+anova(nurse_lmer_0_re, nurse_lmer_0_re_2level, refit = FALSE)
+```
+
+
 
 
 <!-- ========================================================= -->
@@ -234,13 +299,21 @@ sjstats::icc(nurse_lmer_0_re)
 
 ### Fit the Model
 
+> @hox2017, page 22:
+>
+> "In this example, the variable `expcon` is of main interest, and the other variables are covariates.  Their funciton is to control for differences between the groups, which can occur even if randomization is used, especially with small samples, and to explain variance in the outcome variable stress.  To the extent that these variables successfully explain the variance, the power of the test for the effect of `expcon` will be increased."
+
 ```{r}
-nurse_lmer_1_ml <- lme4::lmer(stress ~ expcon + age + gender + 
-                                       experien + wardtype + hospsize +
-                                       (1|hospital/ward),  # each hospital contains several wards
+nurse_lmer_1_ml <- lme4::lmer(stress ~ expcon +              # experimental condition = CATEGORICAL FACTOR
+                                 age + gender + experien +   # level 1 covariates
+                                 wardtype +                  # level 2 covariates
+                                 hospsize +                  # level 3 covariates, hospital size = CATEGORICAL FACTOR 
+                                 (1|hospital/ward),          # Random Intercepts for wards within hospitals
                               data = data_nurse,
-                              REML = FALSE)              # fit via ML for nested FIXED effects
+                              REML = FALSE)                  # fit via ML for nested FIXED effects
 ```
+
+
 
 ```{r, include=FALSE}
 texreg::screenreg(list(nurse_lmer_0_ml, nurse_lmer_1_ml),
@@ -251,9 +324,10 @@ texreg::screenreg(list(nurse_lmer_0_ml, nurse_lmer_1_ml),
 
 ```{r, results='asis'}
 texreg::htmlreg(list(nurse_lmer_0_ml, nurse_lmer_1_ml),
-                  custom.model.names = c("M0: null", "M1: fixed pred"),
-                  caption = "Nested Models: Fixed effects via ML",
-                  digits = 4)
+                custom.model.names = c("M0: null", "M1: fixed pred"),
+                caption = "Nested Models: Fixed effects via ML",
+                caption.above = TRUE,
+                single.row = TRUE)
 ```
 
 ### Assess Significance
@@ -262,82 +336,211 @@ texreg::htmlreg(list(nurse_lmer_0_ml, nurse_lmer_1_ml),
 anova(nurse_lmer_0_ml, nurse_lmer_1_ml)
 ```
 
-It is clear that the inclusing of these fixed, main effects improves the model's fit, but it is questionable that the type of ward is significant *(Wald test is non-significant)*.  Rather than test it directly, we will elave it in the model.  This is common practice to show that an expected variable is not significant.  
+It is clear that the inclusing of these fixed, main effects improves the model's fit, but it is questionable that the type of ward is significant *(Wald test is non-significant)*.  Rather than test it directly, we will leave it in the model.  This is common practice to show that an expected variable is not significant.  
+
+
+
+
+### Centering Variables
+
+Because we will will find that the experimental condition is moderated by hospital size *(in other words there is a significant interaction between `expcon` and `hospsize`)*, @hox2017 presents the models fit with centered values for these two variables.  Let us see how this changes the model.
+
+**(1) Experimental Condition** 
+
+Experimental conditon is a BINARY or two-level factor.
+
+* When it is alternatively coded as a numeric, continuous variable taking the values of zero ($0$) for the reference category and one ($1$) for the other category, the model estimates are exactly the same, including the paramters for the variables and the intercept, AND the model fit statistics.
+
+* When the numeric, continuous variable is further grand-mean centered by additionally subtraction the MEAN of the numberic version, the value of the intercept is the only estimate that changes.
+
+```{r}
+nurse_lmer_1a_ml <- lme4::lmer(stress ~ expconN +            # experimental condition = CONTINUOUS CODED 0/1
+                                 age + gender + experien +   
+                                 wardtype +                  
+                                 hospsize +                 # hospital size = CATEGORICAL FACTOR         
+                                 (1|hospital/ward),          
+                              data = data_nurse,
+                              REML = FALSE)                  
+
+nurse_lmer_1b_ml <- lme4::lmer(stress ~ expconNG +           # experimental condition = CONTINUOUS GRAND-MEAN CENTERED
+                                 age + gender + experien +   
+                                 wardtype +                  
+                                 hospsize +                  # hospital size = CATEGORICAL FACTOR                 
+                                 (1|hospital/ward),          
+                              data = data_nurse,
+                              REML = FALSE)                  
+```
+
+
+
+```{r, include=FALSE}
+texreg::screenreg(list(nurse_lmer_1_ml, 
+                       nurse_lmer_1a_ml, 
+                       nurse_lmer_1b_ml))
+```
+
+
+```{r, results='asis'}
+texreg::htmlreg(list(nurse_lmer_1_ml, 
+                     nurse_lmer_1a_ml, 
+                     nurse_lmer_1b_ml),
+                custom.model.names = c("Factor", 
+                                       "0 vs 1", 
+                                       "Centered"),
+                caption = "MLM: Model 1 - Expereimental Condiditon Coding (2-levels)",
+                caption.above = TRUE,
+                single.row = TRUE,)
+```
+
+
+
+**(2) Hospital Size** 
+
+Experimental conditon is a three-level factor.
+
+* When it is alternatively coded as a numeric, continuous variables taking the values of whole numbers, starting with zero ($0, 1, 2, \dots$), the model there will only be ONE parameter estimated instead of several (one less than the number of categories).  This is becuase the levels are treated as being equally different from each other in terms of the outcome.  This treats the effect of the categorical variable as if it is linear, which may or may not be appropriate.  User beware!
+
+* When the numeric, continuous variable is further grand-mean centered by additionally subtraction the MEAN of the numberic version, the value of the intercept is the only estimate that changes.
+
+```{r}
+nurse_lmer_1c_ml <- lme4::lmer(stress ~ expconNG +           # experimental condition = CONTINUOUS GRAND-MEAN CENTERED
+                                 age + gender + experien +   
+                                 wardtype +                  
+                                 hospsizeN +                 # hospital size = CONTINUOUS CODED 0/1          
+                                 (1|hospital/ward),          
+                              data = data_nurse,
+                              REML = FALSE)   
+
+nurse_lmer_1d_ml <- lme4::lmer(stress ~ expconNG +           # experimental condition = CONTINUOUS GRAND-MEAN CENTERED
+                                 age + gender + experien +   
+                                 wardtype +                  
+                                 hospsizeNG +                # hospital size = CONTINUOUS GRAND-MEAN CENTERED           
+                                 (1|hospital/ward),          
+                              data = data_nurse,
+                              REML = FALSE)
+```
+
+
+```{r, include=FALSE}
+texreg::screenreg(list(nurse_lmer_1b_ml, 
+                       nurse_lmer_1c_ml, 
+                       nurse_lmer_1d_ml))
+```
+
+```{r, results='asis'}
+texreg::htmlreg(list(nurse_lmer_1b_ml, 
+                     nurse_lmer_1c_ml, 
+                     nurse_lmer_1d_ml),
+                custom.model.names = c("Factor", 
+                                       "0 vs 1", 
+                                       "Centered"),
+                caption = "MLM: Model 1 - Hospital Coding (3-levels)",
+                caption.above = TRUE,
+                single.row = TRUE)
+```
+
 
 
 <!-- ========================================================= -->
 ## MLM: Add Random Slope
 <!-- ========================================================= -->
 
+> @hox2017, page 22:
+>
+> "Although logically we can test if explanatory variables at the first level have random coefficients (slopes) at the second or third level, and if explanatory variables at teh second level have random coefficients (slopes) at the third level, these possibilities are not pursued.  We DO test a model with a random coefficient (slope) for `expcon` at the third level, where there turns out to be significant slope variation."  
+
+
+
 ### Fit the Model
 
-```{r}
-nurse_lmer_1_re <- lme4::lmer(stress ~ expcon + age + gender + experien + wardtype + hospsize +
-                                (1|hospital/ward),  
-                              data = data_nurse,
-                              REML = TRUE)              # fit via REML for nested Random Effects
 
-nurse_lmer_2_re <- lme4::lmer(stress ~ expcon + age + gender + experien + wardtype + hospsize +
-                                (expcon|hospital/ward),  
+```{r}
+nurse_lmer_1d_re <- lme4::lmer(stress ~ expconNG +            # experimental condition = CONTINUOUS GRAND-MEAN CENTERED
+                                 age + gender + experien +    # level 1 covariates
+                                 wardtype +                   # level 2 covariate
+                                 hospsizeNG +                 # level 3 covariate, hospital size = CONTINUOUS GRAND-MEAN CENTERED           
+                                 (1|hospital/ward),           # Random Intercepts for wards within hospitals
+                               data = data_nurse, 
+                               REML = TRUE)                   # fit via REML for nested Random Effects
+
+nurse_lmer_2_re <- lme4::lmer(stress ~ expconNG +             # experimental condition = CONTINUOUS GRAND-MEAN CENTERED
+                                age + gender + experien +     # level 1 covariates
+                                wardtype +                    # level 2 covariate
+                                hospsizeNG +                  # level 3 covariate, hospital size = CONTINUOUS GRAND-MEAN CENTERED           
+                                (1|hospital/ward) +           # Random Intercepts for wards within hospitals
+                                (0 + expconNG|hospital),      # RANDOM SLOPES for exp cond within hospital (does not vary witin a ward!)
                               data = data_nurse,
-                              REML = TRUE)              # fit via REML for nested Random Effects
+                              REML = TRUE)                    # fit via REML for nested Random Effects
 ```
 
 
 ```{r, include=FALSE}
-texreg::screenreg(list(nurse_lmer_1_re, nurse_lmer_2_re),
-                  custom.model.names = c("M1: RI", "M2: RIAS"),
-                  caption = "Nested Models: Random Slope via REML",
-                  digits = 4)
+texreg::screenreg(list(nurse_lmer_1d_re, nurse_lmer_2_re))
 ```
 
 
 ```{r, results='asis'}
-texreg::htmlreg(list(nurse_lmer_1_re, nurse_lmer_2_re),
+texreg::htmlreg(list(nurse_lmer_1d_re, nurse_lmer_2_re),
                 custom.model.names = c("M1: RI", "M2: RIAS"),
                 caption = "Nested Models: Random Slope via REML",
-                digits = 4)
+                caption.above = TRUE,
+                single.row = TRUE)
 ```
 
 ### Assess Significance
 
 ```{r}
-anova(nurse_lmer_1_re, nurse_lmer_2_re, refit = FALSE)
+anova(nurse_lmer_1d_re, nurse_lmer_2_re, refit = FALSE)
 ```
 
 The inclusion of a random slope effect for the experimental condition `expcon` significantly improves the models's fit, thus is should be retained.
+
+
+
 
 <!-- ========================================================= -->
 ## MLM: Add Cross-Level Interaction
 <!-- ========================================================= -->
 
+> @hox2017, page 22:
+>
+> "The varying slope can be predicted by adding a cross-level interaction between the variables `expcon` and `hospsize`.  In view of this interaction, the variables `expcon` and `hospsize` have been centered on tehir overal means."
+
+
 ### Fit the Model
 
 ```{r}
-nurse_lmer_2_ml <- lme4::lmer(stress ~ expcon + age + gender + experien + wardtype + hospsize +
-                                (expcon|hospital/ward),  
+nurse_lmer_2_ml <- lme4::lmer(stress ~ expconNG +           # experimental condition = CONTINUOUS GRAND-MEAN CENTERED
+                                age + gender + experien +   # level 1 covariates
+                                wardtype +                  # level 2 covariate
+                                hospsizeNG +                # level 3 covariate, hospital size = CONTINUOUS GRAND-MEAN CENTERED           
+                                (1|hospital/ward) +         # Random Intercepts for wards within hospitals
+                                (0 + expconNG|hospital),    # RANDOM SLOPES for exp cond within hospital (does not vary witin a ward!) 
                               data = data_nurse,
-                              REML = FALSE)              # fit via ML for nested FIXED Effects
+                              REML = FALSE)                 # fit via ML for nested FIXED Effects
 
-nurse_lmer_3_ml <- lme4::lmer(stress ~ expcon + age + gender + experien + wardtype + hospsize*expcon +
-                                (expcon|hospital/ward),  
+nurse_lmer_3_ml <- lme4::lmer(stress ~ expconNG +           # experimental condition = CONTINUOUS GRAND-MEAN CENTERED
+                                age + gender + experien +   # level 1 covariates
+                                wardtype +                  # level 2 covariate
+                                hospsizeNG +                # level 3 covariate, hospital size = CONTINUOUS GRAND-MEAN CENTERED   
+                                expconNG*hospsizeNG +       # CROSS-LEVEL interaction
+                                (1|hospital/ward) +         # Random Intercepts for wards within hospitals
+                                (0 + expconNG|hospital),    # RANDOM SLOPES for exp cond within hospital (does not vary witin a ward!) 
                               data = data_nurse,
-                              REML = FALSE)              # fit via ML for nested FIXED Effects
+                              REML = FALSE)                 # fit via ML for nested FIXED Effects
 ```
 
 ```{r, include=FALSE}
-texreg::screenreg(list(nurse_lmer_2_ml, nurse_lmer_3_ml),
-                  custom.model.names = c("M2: RAIS", "M3: Xlevel Int"),
-                  caption = "Nested Models: Fixed Cross-Level Interaction via ML",
-                  digits = 4)
+texreg::screenreg(list(nurse_lmer_2_ml, nurse_lmer_3_ml))
 ```
 
 
 ```{r, results='asis'}
 texreg::htmlreg(list(nurse_lmer_2_ml, nurse_lmer_3_ml),
-                  custom.model.names = c("M2: RAIS", "M3: Xlevel Int"),
-                  caption = "Nested Models: Fixed Cross-Level Interaction via ML",
-                  digits = 4)
+                custom.model.names = c("M2: RAIS", "M3: Xlevel Int"),
+                caption = "Nested Models: Fixed Cross-Level Interaction via ML",
+                caption.above = TRUE,
+                single.row = TRUE)
 ```
 
 ### Assess Significance
@@ -351,48 +554,41 @@ There is evidence that hospital size moderated the effect of the intervention.  
 
 
 
+## Final Model
 
-### Final Model
 
-
-#### Fit the model
+### Fit the model
 
 The final model should be fit via REML.
 
 ```{r}
-nurse_lmer_3_re <- lme4::lmer(stress ~ expcon + age + gender + experien + wardtype + 
-                                hospsize*expcon +
-                                (expcon|hospital/ward),  
+nurse_lmer_3_re <- lme4::lmer(stress ~ expconNG +           # experimental condition = CONTINUOUS GRAND-MEAN CENTERED
+                                age + gender + experien +   # level 1 covariates
+                                wardtype +                  # level 2 covariate
+                                hospsizeNG +                # level 3 covariate, hospital size = CONTINUOUS GRAND-MEAN CENTERED   
+                                expconNG*hospsizeNG +       # CROSS-LEVEL interaction
+                                (1|hospital/ward) +         # Random Intercepts for wards within hospitals
+                                (0 + expconNG|hospital),    # RANDOM SLOPES for exp cond within hospital (does not vary witin a ward!)  
                               data = data_nurse,
-                              REML = TRUE,                                     # fit via REML for final model
-                              control = lmerControl(optimizer ="Nelder_Mead"))   # Hessian convergence issues           
+                              REML = TRUE)                                       # fit via REML for final model        
 ```
 
 
 
-```{block type='rmdlightbulb', echo=TRUE}
-The warning about **"Model is nearly unidentifiable: large eigenvalue ratio - Rescale variables?"** is a suggestion, not an error.  You can trust the results, but you might want to look into rescaling your variables.
-```
-
-
-
-#### Parameters
+### Table of Estimated Parameters
 
 ```{r, include=FALSE}
-texreg::screenreg(list(nurse_lmer_3_re),
-                  custom.model.names = c("Model"),
-                  caption = "Final Model: with REML",
-                  single.row = TRUE,
-                  digits = 4)
+texreg::screenreg(list(nurse_lmer_3_re), single.row = TRUE)
 ```
 
 
 ```{r, results='asis'}
 texreg::htmlreg(list(nurse_lmer_3_re),
-                  custom.model.names = c("M3: Xlevel Int"),
-                  caption = "Final Model: with REML",
-                  single.row = TRUE,
-                  digits = 4)
+                custom.model.names = c("M3: Xlevel Int"),
+                caption = "Final Model: with REML",
+                caption.above = TRUE,
+                single.row = TRUE,
+                digits = 4)
 ```
 
 ```{block type='rmdimportant', echo=TRUE}
@@ -416,7 +612,7 @@ Usually, the ICC is calculated for the null model ("unconditional model"). Howev
 sjstats::icc(nurse_lmer_3_re)
 ```
 
-#### Visualization 
+### Visualization: Estimated Marginal Means Plot 
 
 
 Although there are many variables in this model, only two are involved in any interaction(s).  For this reason, we will choose to display the estimated marginal means across only experimental condition and hospital size.  For this illustration, all other continuous predictors are taken to be at their mean and categorical predictors at their reference category.
@@ -438,19 +634,37 @@ Get Estimated Marginal Means - default 'nice' predictor values:
 
 
 ```{r}
-effects::Effect(focal.predictors = c("expcon", "hospsize"),
-                mod = nurse_lmer_3_re) %>% 
+effects::Effect(focal.predictors = c("expconNG", "hospsizeNG"),
+                mod = nurse_lmer_3_re,
+                xlevels = list(expconNG   = c(-0.504, 0.496),
+                               hospsizeNG = c(-0.776, 0.224, 1.224))) %>% 
   data.frame()  
 ```
 
-
+```{r}
+effects::Effect(focal.predictors = c("expconNG", "hospsizeNG"),
+                mod = nurse_lmer_3_re,
+                xlevels = list(expconNG   = c(-0.504, 0.496),
+                               hospsizeNG = c(-0.776, 0.224, 1.224))) %>% 
+  data.frame()  %>% 
+  dplyr::mutate(expcon = factor(expconNG + 0.504,
+                                labels = c("Control", "Intervention"))) %>% 
+  dplyr::mutate(hopsize = factor(hospsizeNG + 0.776,
+                                 labels = c("Small", "Medium", "Large")))
+```
 
 ```{r}
-effects::Effect(focal.predictors = c("expcon", "hospsize"),
-                mod = nurse_lmer_3_re) %>% 
+effects::Effect(focal.predictors = c("expconNG", "hospsizeNG"),
+                mod = nurse_lmer_3_re,
+                xlevels = list(expconNG   = c(-0.504, 0.496),
+                               hospsizeNG = c(-0.776, 0.224, 1.224))) %>% 
   data.frame()  %>% 
+  dplyr::mutate(expcon = factor(expconNG + 0.504,
+                                labels = c("Control", "Intervention"))) %>% 
+  dplyr::mutate(hospsize = factor(hospsizeNG + 0.776,
+                                 labels = c("Small", "Medium", "Large"))) %>% 
   ggplot() +
-  aes(x = hospsize %>% forcats::fct_rev(),
+  aes(x = hospsize,
       y = fit,
       group = expcon,
       shape = expcon,
@@ -479,45 +693,58 @@ effects::Effect(focal.predictors = c("expcon", "hospsize"),
         legend.justification = c(1, 0))
 ```
 
-This plot illustrates the estimated marginal means among male nurses at the overall mean age (43.01 years), with the mean level experience (17.06 years), working in general sized hospitals.  Different values for thoes predictors would yield the exact sample plot, shifted as a whole either up or down.
-
-#### Post Hoc Tests
+This plot illustrates the estimated marginal means among male (gender's reference category) nurses at the overall mean age (43.01 years), with the mean level experience (17.06 years), since thoes variables were not included as `focal.predictors` in the `effects::Effect()` function.  Different values for thoes predictors would yield the exact sample plot, shifted as a whole either up or down.
 
 
-```{r}
-nurse_lmer_3_re %>% 
-  emmeans::emmeans(~ expcon | hospsize)
+
+
+
+## Interpretation
+
+There is evidence this intervention lowered stress among nurses working in small hospitals and to a smaller degree in medium sized hospitals.  The intervention did not exhibit an effect in large hospitals.  
+
+
+### Strength
+
+This analysis was able to incorporated all three levels of clustering while additionally controlling for many covariates, both categorical (nurse gender and ward type) and continuous (nurse age and experience in years).  Also heterogeneity was accounted for in terms of the interventions's effect at various hospitals.  This would NOT be possible via any ANOVA type anlysis.
+
+
+### Weakness
+
+The approach presented by @hox2017 and shown above involved mean-centering categorical variables.  This would only be appropriate for a factor with more than two levels if its effect on the outcome was linear.  Also, as the mean-centered variables are treated as continuous variables, post hoc tests are increasingly difficult.
+
+
+
+## Reproduction of Table 2.5 
+
+@hox2017 presents a table on page 23 comparing various models.  Note, that table includes models only fit via maximum likelihood, not REML.  Also, the model $M_3$: with cross-level interaction is slightly different for an unknown reason.
+
+```{r, include=FALSE}
+texreg::screenreg(list(nurse_lmer_0_ml, nurse_lmer_1d_ml, nurse_lmer_2_ml, nurse_lmer_3_ml))
 ```
 
-```{r}
-nurse_lmer_3_re %>% 
-  emmeans::emmeans(~ expcon | hospsize) %>% 
-  pairs()
+
+```{r, results='asis'}
+texreg::htmlreg(list(nurse_lmer_0_ml, 
+                     nurse_lmer_1d_ml, 
+                     nurse_lmer_2_ml, 
+                     nurse_lmer_3_ml),
+                custom.model.names = c("M0", "M1", "M2", "M3"),
+                caption = "Hox Table 2.5: Models for stress in hospitals and wards",
+                caption.above = TRUE,
+                single.row = TRUE,
+                digits = 2)
 ```
 
-Note: the pairwise t-tests above do not control for multiple compairsons.  If we did manually, we would multiply the p-values by 3 (because we are doing three tests) to conduct the Bonferroni correction.
+
+Deviance:
 
 ```{r}
-c(.0001, .0196, .1967)*3
+c(deviance(nurse_lmer_0_ml),         
+  deviance(nurse_lmer_1d_ml),
+  deviance(nurse_lmer_2_ml),
+  deviance(nurse_lmer_3_ml)) %>% 
+  round(1)
 ```
-
-
-
-
-
-#### Interpretation
-
-There is evidence this intervention lowered stress among nurses working in small hospitals and a trend for medium sized hospitals.  The intervention did not exhibit an effect in large hospitals.
-
-
- 
-
-
-
-
-
-
-
-
 
 
